# pspd

./: .gitignore  README.md
game_client/: Cargo.toml
game_client/src/: main.rs
grpc/: Cargo.toml  Makefile  README.md  client_setup.sh  grpclient_setup.ps1  miniku.ps1  miniku.sh  minikube.ps1  minikube.sh  ruby-gateway.yaml  service-a.yaml  service-b.yaml  wasm-client.yaml
grpc/game_kernel/src/: lib.rs
grpc/gateway_p/: Dockerfile  Gemfile  config.ru  gateway_p_ruby.rb
grpc/service_a/: Dockerfile  Makefile  README.md  game_movement.proto  go.mod  main.go
grpc/service_a/proto/: game_movement.pb.go
grpc/service_b/: Dockerfile  Makefile  README.md  game_state.proto  go.mod  go.sum  main.go
grpc/service_b/proto/: game_state.pb.go  game_state_grpc.pb.go
grpc/wasm_game_client/: Dockerfile
grpc/wasm_game_client/src/: app.rs  drawing.rs  utils.rs
grpc/wasm_game_client/www/: index.js
grpc_examples/bidirecional_streaming/: README.md  client.go  go.mod  greetbistream.proto  server.go
grpc_examples/bidirecional_streaming/greetbistream/: greetbistream.pb.go  greetbistream_grpc.pb.go
grpc_examples/client_streaming/: README.md  client.go  go.mod  greetcstream.proto  server.go
grpc_examples/client_streaming/greetcstream/: greetcstream.pb.go  (+1 more)
grpc_examples/server_streaming/: README.md  client.go  go.mod  greetstream.proto  server.go
grpc_examples/simple_unary_go/: README.md  client.go  go.mod  helloworld.proto  server.go
k8s/: gateway_go_deploymeny.yaml  service_b_deployment.yaml
k8s-rest/: service_a_deployment.yaml  wasm_client_deployment.yaml
rest/: Cargo.toml  Dockerfile.b  Dockerfile.builder  Dockerfile.gateway  README-rest.md  build.ps1  build.sh  client_setup.sh  miniku-rest.ps1  miniku-rest.sh  minikube-rest.ps1  starrt.ps1  starrt.sh
rest-server-rust/: Cargo.toml
rest-server-rust/src/: main.rs
rest/game_kernel/: Cargo.toml
rest/gateway_p_go/: Dockerfile  go.mod  go.sum  main.go
rest/k8s/: gateway_go_deployment.yaml  service_b_deployment.yaml
rest/servico_a/: Cargo.toml  Dockerfile
rest/servico_a/src/: main.rs
rest/servico_b/: Cargo.toml  Dockerfile
rest/servico_b/src/: main.rs
rest/wasm_game_client/: Cargo.toml  Dockerfile  rezzet-windows.ps1
rest/wasm_game_client/src/: app.rs  drawing.rs  lib.rs
rest/wasm_game_client/www/: index.html  index.js
wasm_game_client/: Cargo.toml  rezzet.sh
wasm_game_client/src/: lib.rs
wasm_game_client/www/: index.html  index.js
wasm_game_client/www/pkg/: wasm_game_client.d.ts  wasm_game_client.js  wasm_game_client_bg.wasm  wasm_game_client_bg.wasm.d.ts
(+22 files in other folders)
