[package]
name = "servico_a"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.5"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12.23", features = ["json"] }
game_kernel = { path = "../game_kernel" }
