[package]
name = "wasm_game_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.54"
game_kernel = { path = "../game_kernel" }

[dependencies.web-sys]
version = "0.3.69"
features = [
  'Window',
  'Location',
  'Document',
  'HtmlCanvasElement',
  'CssStyleDeclaration',
  'CanvasRenderingContext2d',
  'Element',
  'HtmlElement',
  'KeyboardEvent',
  'Response',
  'Request',
  'RequestInit',
  'RequestMode',
  'Headers',
]
